miniextendr-macros/tests/ui/option_with_value.rs
//! Test: option with value (not supported)

use miniextendr_macros::miniextendr;

#[miniextendr(invisible = true)]
fn my_fn() {}

fn main() {}
